cmake_minimum_required(VERSION 3.16)
project(test)
set(CXX_STANDARD_REQUIRED on)
set(CMAKE_CXX_STANDARD 17)
set(SRC_LIST test.cc)
include_directories(./)
add_subdirectory(Server)
add_subdirectory(Reactor)
add_executable(test ${SRC_LIST})
target_link_libraries(test reactor)
set_target_properties(conn PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
set_target_properties(server PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
set_target_properties(reactor PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)