cmake_minimum_required(VERSION 3.16)
project(test)
set(CXX_STANDARD_REQUIRED on)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_INSTALL_PREFIX ../..)
set(CMAKE_BUILD_TYPE Debug)
set(SRC_LIST test.cc)
add_subdirectory(Reactor)
include_directories(../include)
add_executable(test ${SRC_LIST})
target_link_libraries(test reactor pthread)
install(TARGETS test DESTINATION bin)