include_directories(../../include)
SET(SERVER_SRCS server.cc conn.cc)
add_library(server STATIC ${SERVER_SRCS})
set_target_properties(server PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/../lib)
aux_source_directory(. SRCS)
add_library(reactor STATIC ${SRCS})
set_target_properties(reactor PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/../lib)